# spicedb-rs-client

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.test.yml
.github/workflows/: build.yml  check.yml  test.yml
crates/spicedb-rs-client/: Cargo.toml  README.md
crates/spicedb-rs-client/src/: lib.rs
crates/spicedb-rs-client/tests/: v1_integration.rs
crates/spicedb-rs-proto/: Cargo.toml  README.md  build.rs
crates/spicedb-rs-proto/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
