[workspace]
members = ["crates/*", "xtask"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Levi Laine <shiueo.csh@gmail.com>"]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.93.0"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
http = "1.4.0"
prost = "0.14.3"
prost-types = "0.14.3"
protoc-bin-vendored = "3.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
tonic = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
walkdir = "2.5.0"
