[package]
name = "spicedb-rs-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal crates
spicedb-rs-proto.workspace = true

# External dependencies
http.workspace = true
thiserror.workspace = true
tonic.workspace = true

[dev-dependencies]
serial_test.workspace = true
tokio.workspace = true
