[package]
name = "spicedb-rs-client"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust client for the SpiceDB/Authzed gRPC API."
readme = "README.md"

[dependencies]
# Internal crates
spicedb-rs-proto.workspace = true

# External dependencies
http.workspace = true
thiserror.workspace = true
tonic.workspace = true

[dev-dependencies]
prost-types.workspace = true
serial_test.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
