[package]
name = "spicedb-rs-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true
