[package]
name = "spicedb-rs-proto"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Generated Rust protobuf and gRPC bindings for SpiceDB/Authzed APIs."
readme = "README.md"
build = "build.rs"

[dependencies]
# External dependencies
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true
